--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,87 @@
         </div>
       </section>
 
+      <section class="new-collection">
+        <div class="container-fluid">
+          <h3 class="new-collection__title">Furniture new collection</h3>
+          <p class="new-collection__text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
+
+          <div class="collection">
+            <a class="collection__item" href="#">
+              <img src="images/content/collection-item-1.jpg" alt="collection image" class="collection__img">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img src="images/content/collection-item-2.jpg" alt="collection image" class="collection__img">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img src="images/content/collection-item-3.jpg" alt="collection image" class="collection__img">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img src="images/content/collection-item-4.jpg" alt="collection image" class="collection__img">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img src="images/content/collection-item-5.jpg" alt="collection image" class="collection__img">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="decor">
+        <div class="container">
+          <h2 class="decor__title">Aesthetic ethical drinking</h2>
+          <p class="decor__text">Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking vinegar austint</p>
+        </div>
+      </section>
+
+      <section class="works-path">
+        <div class="container">
+          <h3 class="works-path__title">How it works</h3>
+
+          <div class="works-path__items">
+            <div class="works-path__items--box">
+              <div class="works-path__item works-path__item--designer">
+                <h6 class="works-path__item-title works-path__item-title--designer">Designer Consultation</h6>
+                <p class="works-path__item-text">Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book</p>
+              </div>
+
+              <div class="works-path__item works-path__item--production">
+                <h6 class="works-path__item-title works-path__item-title--production">Production</h6>
+                <p class="works-path__item-text">Everyday carry actually neutra authentic kogi shabby chic</p>
+              </div>
+            </div>
+
+            <div class="works-path__item works-path__item--measurements">
+              <h6 class="works-path__item-title works-path__item-title--measurements">Measurements</h6>
+              <p class="works-path__item-text">Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class="footer">
@@ -95,8 +176,7 @@
           <div class="footer__inner">
             <div class="footer__info">
               <h6 class="footer__info-title">Contact Us</h6>
-              <p class="footer__info-text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you
-                probably occupy</p>
+              <p class="footer__info-text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy</p>
               <a class="footer__info-email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
 
               <form action="https://postman-echo.com/post" class="footer__form">
