--- a/app/index.html
+++ b/app/index.html
@@ -168,6 +168,60 @@
         </div>
       </section>
 
+      <div class="gallery">
+        <div class="container-fluid">
+          <div class="gallery__buttons">
+            <button class="gallery__btn" data-filter=".category-bedroom">Bedroom furniture</button>
+            <button class="gallery__btn" data-filter=".category-living">Living room furniture</button>
+            <button class="gallery__btn" data-filter=".category-office">Office furniture</button>
+            <button class="gallery__btn" data-filter=".category-dining">Dining room futniture</button>
+            <button class="gallery__btn" data-filter=".category-chair">Chair</button>
+          </div>
+
+          <div class="gallery__inner">
+            <div class="gallery__items mix category-bedroom">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_3.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_4.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_5.jpg" alt="images"></a>
+            </div>
+
+            <div class="gallery__items mix category-living">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_3.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_4.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_5.jpg" alt="images"></a>
+            </div>
+
+            <div class="gallery__items mix category-office">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_3.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_4.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_5.jpg" alt="images"></a>
+            </div>
+
+            <div class="gallery__items mix category-dining">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_3.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_4.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_5.jpg" alt="images"></a>
+            </div>
+
+            <div class="gallery__items mix category-chair">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_3.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_4.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_5.jpg" alt="images"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
 
     <footer class="footer">
