--- a/app/about.html
+++ b/app/about.html
@@ -19,8 +19,8 @@
         <div class="header__inner">
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a class="menu__list-link" href="#">About</a></li>
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Gallery</a></li>
+              <li class="menu__list-item"><a class="menu__list-link menu__list-link--active">About</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="gallery.html">Gallery</a></li>
             </ul>
           </nav>
 
@@ -45,7 +45,7 @@
 
               <h4 class="rightside-menu__title">Furniture for life</h4>
               <p class="rightside-menu__text">Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn</p>
-              <img class="rightside-menu__img" src="images/rightside-menu-img.jpg" alt="rightside-menu-img">
+              <img class="rightside-menu__img" src="images/content/rightside-menu-img.jpg" alt="rightside-menu-img">
             </div>
           </div>
         </div>
@@ -53,7 +53,157 @@
     </header>
 
 
-    <main class="main"></main>
+    <main class="main">
+      <div class="breadcrumbs">
+        <div class="container">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Home</a></li>
+            <li class="breadcrumbs__item"><a class="breadcrumbs__link">About</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <section class="about">
+        <div class="about__preview">
+          <h2 class="about__title">About Us</h2>
+        </div>
+
+        <div class="about__content">
+          <div class="container">
+            <h3 class="about__content-title">Balance in the simple through an informed marriage of design, functional and craft</h3>
+            <div class="about__content-text">
+              <p>Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock chillwave literally post-ironic ramps subway tile kitsch. Shaman tumblr fixie echo park street art. Enamel pin vaporware wayfarers, organic succulents hella sustainable cardigan.</p>
+
+              <p>Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn tilde distillery pork belly single-origin coffee tumblr quinoa copper mug. Affogato cold-pressed unicorn, viral intelligentsia leggings raw denim kombucha tote bag messenger bag chambray vape coloring book scenester. Activated charcoal wayfarers church-key tote bag synth brunch. Retro cornhole</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="about__popup">
+          <a class="about__play" data-fancybox href="https://youtu.be/BegMnWXYmHs"></a>
+        </div>
+
+      </section>
+
+      <section class="inspiration">
+        <div class="container-fluid">
+          <div class="inspiration__inner">
+            <img class="inspiration__img" src="images/inspiration-decor.png" alt="images">
+
+            <div class="inspiration__content">
+              <h3 class="inspiration__title">Our Inspiration in details</h3>
+              <p class="inspiration__text">Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.</p>
+
+              <ul class="inspiration__list">
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Design and technical drawings</p>
+                    <p class="inspiration__item-num">80%</p>
+                  </div>
+
+                  <div class="inspiration__line" style="width: 80%"></div>
+                </li>
+
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Measurments</p>
+                    <p class="inspiration__item-num">70%</p>
+                  </div>
+
+                  <div class="inspiration__line" style="width: 70%"></div>
+                </li>
+
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Furniture functionality analysis</p>
+                    <p class="inspiration__item-num">75%</p>
+                  </div>
+
+                  <div class="inspiration__line" style="width: 75%"></div>
+                </li>
+
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Interior visualization</p>
+                    <p class="inspiration__item-num">40%</p>
+                  </div>
+
+                  <div class="inspiration__line" style="width: 40%"></div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="partners">
+        <div class="container-fluid">
+          <ul class="partners__list">
+            <li class="partners__item">
+              <img class="partners__img" src="images/partners/partners-1.png" alt="partners">
+            </li>
+
+            <li class="partners__item">
+              <img class="partners__img" src="images/partners/partners-2.png" alt="partners">
+            </li>
+
+            <li class="partners__item">
+              <img class="partners__img" src="images/partners/partners-1.png" alt="partners">
+            </li>
+
+            <li class="partners__item">
+              <img class="partners__img" src="images/partners/partners-2.png" alt="partners">
+            </li>
+
+            <li class="partners__item">
+              <img class="partners__img" src="images/partners/partners-1.png" alt="partners">
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="collection container-fluid">
+        <a class="collection__item" href="#">
+          <img src="images/content/collection-item-1.jpg" alt="collection image" class="collection__img">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+
+        <a class="collection__item" href="#">
+          <img src="images/content/collection-item-2.jpg" alt="collection image" class="collection__img">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+
+        <a class="collection__item" href="#">
+          <img src="images/content/collection-item-3.jpg" alt="collection image" class="collection__img">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+
+        <a class="collection__item" href="#">
+          <img src="images/content/collection-item-4.jpg" alt="collection image" class="collection__img">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+
+        <a class="collection__item" href="#">
+          <img src="images/content/collection-item-5.jpg" alt="collection image" class="collection__img">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+      </div>
+    </main>
 
     <footer class="footer">
       <div class="footer__content">
