--- a/app/gallery.html
+++ b/app/gallery.html
@@ -20,7 +20,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item"><a class="menu__list-link" href="about.html">About</a></li>
-              <li class="menu__list-item"><a class="menu__list-link" href="gallery.html">Gallery</a></li>
+              <li class="menu__list-item"><a class="menu__list-link menu__list-link--active">Gallery</a></li>
             </ul>
           </nav>
 
@@ -58,7 +58,7 @@
         <div class="container">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Home</a></li>
-            <li class="breadcrumbs__item"><a class="breadcrumbs__link">About</a></li>
+            <li class="breadcrumbs__item"><a class="breadcrumbs__link">Gallery</a></li>
           </ul>
         </div>
       </div>
