--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,8 @@
         <div class="header__inner">
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a class="menu__list-link" href="#">About</a></li>
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Gallery</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="about.html">About</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="gallery.html">Gallery</a></li>
             </ul>
           </nav>
 
@@ -221,6 +221,38 @@
           </div>
         </div>
       </div>
+
+      <section class="blog-box">
+        <div class="container">
+          <h3 class="blog-box__title">More inspiration ideas in our blog</h3>
+
+          <div class="blog-box__items">
+            <div class="blog-box__item">
+              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/blog/blog-img-1.jpg" alt="blog-img-1"></a>
+
+              <div class="blog-box__links">
+                <a class="blog-box__date" href="#">March 12, 2020</a> |
+                <a class="blog-box__author" href="#">by Ann Summers</a> |
+                <a class="blog-box__theme" href="#">Inrerior</a>
+              </div>
+
+              <a class="blog-box__item-link" href="#"><h4 class="blog-box__item-title">Listicle actually selvage activated charcoal for the drinking vinegar</h4></a>
+            </div>
+
+            <div class="blog-box__item">
+              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/blog/blog-img-2.jpg" alt="blog-img-2"></a>
+
+              <div class="blog-box__links">
+                <a class="blog-box__date" href="#">September 28,2020</a> |
+                <a class="blog-box__author" href="#">by Finnagan Morningstar</a> |
+                <a class="blog-box__theme" href="#">Dining room interior</a>
+              </div>
+
+              <a class="blog-box__item-link" href="#"><h4 class="blog-box__item-title">Red selfies edison bulb four dollar toast humblebrag</h4></a>
+            </div>
+          </div>
+        </div>
+      </section>
 
     </main>
 
