--- a/app/blog.html
+++ b/app/blog.html
@@ -28,8 +28,8 @@
 
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Blog</a></li>
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Contact</a></li>
+              <li class="menu__list-item"><a class="menu__list-link menu__list-link--active">Blog</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="contacts.html">Contact</a></li>
             </ul>
           </nav>
 
