--- a/app/gallery.html
+++ b/app/gallery.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Desire | Gallery</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,8 +28,8 @@
 
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Blog</a></li>
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Contact</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="blog.html">Blog</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="contacts.html">Contact</a></li>
             </ul>
           </nav>
 
@@ -63,6 +63,85 @@
         </div>
       </div>
 
+      <div class="gallery gallery-page">
+        <div class="container-fluid">
+          <div class="gallery__buttons">
+            <button class="gallery__btn" data-filter=".category-bedroom">Bedroom furniture</button>
+            <button class="gallery__btn" data-filter=".category-living">Living room furniture</button>
+            <button class="gallery__btn" data-filter=".category-office">Office furniture</button>
+            <button class="gallery__btn" data-filter=".category-dining">Dining room futniture</button>
+            <button class="gallery__btn" data-filter=".category-chair">Chair</button>
+          </div>
+
+          <div class="gallery__inner">
+            <div class="gallery__items mix category-bedroom">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_6.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_7.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_8.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_9.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_10.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_11.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_12.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_13.jpg" alt="images"></a>
+            </div>
+
+            <div class="gallery__items mix category-living">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_6.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_7.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_8.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_9.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_10.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_11.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_12.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_13.jpg" alt="images"></a>
+            </div>
+
+            <div class="gallery__items mix category-office">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_6.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_7.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_8.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_9.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_10.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_11.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_12.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_13.jpg" alt="images"></a>
+            </div>
+
+            <div class="gallery__items mix category-dining">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_6.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_7.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_8.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_9.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_10.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_11.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_12.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_13.jpg" alt="images"></a>
+            </div>
+
+            <div class="gallery__items mix category-chair">
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_6.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_2.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_7.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_8.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_9.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_10.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_11.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_1.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_12.jpg" alt="images"></a>
+              <a class="gallery__item" href="#"><img class="gallery__img" src="images/gallery/gallery_13.jpg" alt="images"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
 
     <footer class="footer">
@@ -73,7 +152,7 @@
               <h6 class="footer__info-title">Contact Us</h6>
               <p class="footer__info-text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you
                 probably occupy</p>
-              <a class="footer__info-email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
+              <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
 
               <form action="https://postman-echo.com/post" class="footer__form">
                 <input class="footer__form-input" type="email" placeholder="Subscribe by email">
@@ -82,11 +161,11 @@
             </div>
 
             <ul class="footer__social">
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook" href="#">Facebook</a></li>
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--instagram" href="#">Instagram</a></li>
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--pinterest" href="#">Pinterest</a></li>
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--whatsapp" href="#">WhatsApp</a></li>
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube" href="#">Youtube</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook" href="#" aria-label="our page in Facebook">Facebook</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--instagram" href="#" aria-label="our page in Instagram">Instagram</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--pinterest" href="#" aria-label="our page in Pinterest">Pinterest</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--whatsapp" href="#" aria-label="our page in WhatsApp">WhatsApp</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube" href="#" aria-label="our page in Youtube">Youtube</a></li>
             </ul>
 
             <nav class="footer__menu">
