--- a/app/contacts.html
+++ b/app/contacts.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Desire | Contact</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,8 +28,8 @@
 
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Blog</a></li>
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Contact</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="blog.html">Blog</a></li>
+              <li class="menu__list-item"><a class="menu__list-link menu__list-link--active">Contact</a></li>
             </ul>
           </nav>
 
@@ -63,6 +63,31 @@
         </div>
       </div>
 
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6305.299923400179!2d-122.41272269649362!3d37.7982422967249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2zNzI1IEdyZWVuIFN0LCBTYW4gRnJhbmNpc2NvLCBDQSA5NDEzMywg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1617752486318!5m2!1sru!2sru" width="100%" height="578" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+
+      <section class="contacts">
+        <div class="container">
+          <h3 class="contacts__title">Contact Us</h3>
+
+          <ul class="contacts__social-list">
+            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--facebook" href="#" aria-label="our page in Facebook"></a></li>
+            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--instagram" href="#" aria-label="our page in Instagram"></a></li>
+            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--pinterest" href="#" aria-label="our page in Pinterest"></a></li>
+            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--whatsapp" href="#" aria-label="our page in WhatsApp"></a></li>
+            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--youtube" href="#" aria-label="our page in Youtube"></a></li>
+          </ul>
+
+          <p class="contacts__text">Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock</p>
+
+          <a class="contacts__phone" href="tel:+14158297934">(415) 829-7934</a>
+          <address class="contacts__street">725 Green St</address>
+          <address class="contacts__city">San Francisco, California(CA), 94133</address>
+          <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
+        </div>
+      </section>
+
     </main>
 
     <footer class="footer">
@@ -71,8 +96,7 @@
           <div class="footer__inner">
             <div class="footer__info">
               <h6 class="footer__info-title">Contact Us</h6>
-              <p class="footer__info-text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you
-                probably occupy</p>
+              <p class="footer__info-text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy</p>
               <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
 
               <form action="https://postman-echo.com/post" class="footer__form">
