--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,8 @@
 
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Blog</a></li>
-              <li class="menu__list-item"><a class="menu__list-link" href="#">Contact</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="blog.html">Blog</a></li>
+              <li class="menu__list-item"><a class="menu__list-link" href="contacts.html">Contact</a></li>
             </ul>
           </nav>
 
@@ -263,7 +263,7 @@
             <div class="footer__info">
               <h6 class="footer__info-title">Contact Us</h6>
               <p class="footer__info-text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy</p>
-              <a class="footer__info-email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
+              <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
 
               <form action="https://postman-echo.com/post" class="footer__form">
                 <input class="footer__form-input" type="email" placeholder="Subscribe by email">
@@ -272,11 +272,11 @@
             </div>
 
             <ul class="footer__social">
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook" href="#">Facebook</a></li>
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--instagram" href="#">Instagram</a></li>
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--pinterest" href="#">Pinterest</a></li>
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--whatsapp" href="#">WhatsApp</a></li>
-              <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube" href="#">Youtube</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook" href="#" aria-label="our page in Facebook">Facebook</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--instagram" href="#" aria-label="our page in Instagram">Instagram</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--pinterest" href="#" aria-label="our page in Pinterest">Pinterest</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--whatsapp" href="#" aria-label="our page in WhatsApp">WhatsApp</a></li>
+              <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube" href="#" aria-label="our page in Youtube">Youtube</a></li>
             </ul>
 
             <nav class="footer__menu">
