--- a/app/about.html
+++ b/app/about.html
@@ -216,8 +216,8 @@
               <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
 
               <form action="https://postman-echo.com/post" class="footer__form">
-                <input class="footer__form-input" type="email" placeholder="Subscribe by email">
-                <button class="footer__form-button">Send</button>
+                <input class="footer__form-input input" type="email" placeholder="Subscribe by email">
+                <button class="form-button">Send</button>
               </form>
             </div>
 
