--- a/app/index.html
+++ b/app/index.html
@@ -228,7 +228,7 @@
 
           <div class="blog-box__items">
             <div class="blog-box__item">
-              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/blog/blog-img-1.jpg" alt="blog-img-1"></a>
+              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/content/blog-img-1.jpg" alt="blog-img-1"></a>
 
               <div class="blog-box__links">
                 <a class="blog-box__date" href="#">March 12, 2020</a> |
@@ -240,7 +240,7 @@
             </div>
 
             <div class="blog-box__item">
-              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/blog/blog-img-2.jpg" alt="blog-img-2"></a>
+              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/content/blog-img-2.jpg" alt="blog-img-2"></a>
 
               <div class="blog-box__links">
                 <a class="blog-box__date" href="#">September 28,2020</a> |
@@ -266,8 +266,8 @@
               <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
 
               <form action="https://postman-echo.com/post" class="footer__form">
-                <input class="footer__form-input" type="email" placeholder="Subscribe by email">
-                <button class="footer__form-button">Send</button>
+                <input class="footer__form-input input" type="email" placeholder="Subscribe by email">
+                <button class="form-button">Send</button>
               </form>
             </div>
 
