--- a/app/contacts.html
+++ b/app/contacts.html
@@ -58,7 +58,7 @@
         <div class="container">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Home</a></li>
-            <li class="breadcrumbs__item"><a class="breadcrumbs__link">About</a></li>
+            <li class="breadcrumbs__item"><a class="breadcrumbs__link">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -71,22 +71,183 @@
         <div class="container">
           <h3 class="contacts__title">Contact Us</h3>
 
-          <ul class="contacts__social-list">
-            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--facebook" href="#" aria-label="our page in Facebook"></a></li>
-            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--instagram" href="#" aria-label="our page in Instagram"></a></li>
-            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--pinterest" href="#" aria-label="our page in Pinterest"></a></li>
-            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--whatsapp" href="#" aria-label="our page in WhatsApp"></a></li>
-            <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--youtube" href="#" aria-label="our page in Youtube"></a></li>
-          </ul>
+          <div class="contacts__content">
+            <ul class="contacts__social-list">
+              <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--facebook" href="#" aria-label="our page in Facebook"></a></li>
+              <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--instagram" href="#" aria-label="our page in Instagram"></a></li>
+              <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--pinterest" href="#" aria-label="our page in Pinterest"></a></li>
+              <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--whatsapp" href="#" aria-label="our page in WhatsApp"></a></li>
+              <li class="contacts__social-item"><a class="contacts__social-link footer__social-link--youtube" href="#" aria-label="our page in Youtube"></a></li>
+            </ul>
 
-          <p class="contacts__text">Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock</p>
+            <p class="contacts__text">Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock</p>
 
-          <a class="contacts__phone" href="tel:+14158297934">(415) 829-7934</a>
-          <address class="contacts__street">725 Green St</address>
-          <address class="contacts__city">San Francisco, California(CA), 94133</address>
-          <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
+            <a class="contacts__phone" href="tel:+14158297934">(415) 829-7934</a>
+            <address class="contacts__address">725 Green St</address>
+            <address class="contacts__address contacts__city">San Francisco, California(CA), 94133</address>
+            <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
+
+            <form action="#" class="contacts__form">
+              <input class="contacts__form-input input" type="text" name="name" placeholder="Your name">
+              <input class="contacts__form-input input" type="text" name="email" placeholder="Your e-mail">
+              <textarea class="contacts__form-message input" name="message" placeholder="Your message"></textarea>
+              <button class="form-button">Send</button>
+            </form>
+          </div>
         </div>
       </section>
+
+      <div class="contacts-slider container-fluid">
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-1.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-2.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-3.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-4.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-5.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-6.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-7.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-8.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-9.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-10.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-1.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-2.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-3.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-4.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-5.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-6.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-7.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-8.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-9.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-10.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-1.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-2.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-3.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-4.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-5.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-6.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-7.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-8.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-9.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+
+        <a class="contacts-slider__link" href="#">
+          <img class="contacts-slider__img" src="images/content/contacts-slider-10.jpg" alt="contacts-slider__img">
+          <p class="contacts-slider__title">Truffaut literally trust</p>
+        </a>
+      </div>
 
     </main>
 
@@ -100,8 +261,8 @@
               <a class="email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
 
               <form action="https://postman-echo.com/post" class="footer__form">
-                <input class="footer__form-input" type="email" placeholder="Subscribe by email">
-                <button class="footer__form-button">Send</button>
+                <input class="footer__form-input input" type="email" placeholder="Subscribe by email">
+                <button class="form-button">Send</button>
               </form>
             </div>
 
