--- a/app/about.html
+++ b/app/about.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desire | About</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -80,7 +78,7 @@
         </div>
 
         <div class="about__popup">
-          <a class="about__play" data-fancybox href="https://youtu.be/BegMnWXYmHs"></a>
+          <a class="play-popup" data-fancybox href="https://youtu.be/BegMnWXYmHs"></a>
         </div>
 
       </section>
