--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desire</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,400;0,600;1,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -228,7 +226,7 @@
 
           <div class="blog-box__items">
             <div class="blog-box__item">
-              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/content/blog-img-1.jpg" alt="blog-img-1"></a>
+              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/blog/blog-img-1.jpg" alt="blog-img-1"></a>
 
               <div class="blog-box__links">
                 <a class="blog-box__date" href="#">March 12, 2020</a> |
@@ -240,7 +238,7 @@
             </div>
 
             <div class="blog-box__item">
-              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/content/blog-img-2.jpg" alt="blog-img-2"></a>
+              <a class="blog-box__img-link" href="#"><img class="blog-box__img" src="images/blog/blog-img-2.jpg" alt="blog-img-2"></a>
 
               <div class="blog-box__links">
                 <a class="blog-box__date" href="#">September 28,2020</a> |
